--- a/src/main/resources/eu.yeger.comaga.view/introScreen.fxml
+++ b/src/main/resources/eu.yeger.comaga.view/introScreen.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" spacing="40.0" stylesheets="@../eu.yeger.comaga.view/main.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.yeger.comaga.controller.IntroScreenController">
+<VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" spacing="40.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.yeger.comaga.controller.IntroScreenController">
    <children>
       <Label id="title-label" text="Color Matching Game">
          <font>
@@ -26,9 +26,9 @@
             </Label>
             <HBox alignment="CENTER" spacing="20.0">
                <children>
-                  <Button id="plus-minus-button" mnemonicParsing="false" text="-" />
-                  <Label text="5" />
-                  <Button id="plus-minus-button" mnemonicParsing="false" text="+" />
+                  <Button id="plus-minus-button" fx:id="decreaseWidthButton" mnemonicParsing="false" text="-" />
+                  <Label fx:id="widthLabel" text="5" />
+                  <Button id="plus-minus-button" fx:id="increaseWidthButton" mnemonicParsing="false" text="+" />
                </children>
                <VBox.margin>
                   <Insets />
@@ -41,14 +41,14 @@
             <Label text="Height" />
             <HBox alignment="CENTER" spacing="20.0">
                <children>
-                  <Button id="plus-minus-button" mnemonicParsing="false" text="-" />
-                  <Label text="10" />
-                  <Button id="plus-minus-button" mnemonicParsing="false" text="+" />
+                  <Button id="plus-minus-button" fx:id="decreaseHeightButton" mnemonicParsing="false" text="-" />
+                  <Label fx:id="heightLabel" text="10" />
+                  <Button id="plus-minus-button" fx:id="increaseHeightButton" mnemonicParsing="false" text="+" />
                </children>
             </HBox>
          </children>
       </VBox>
-      <Button id="confirm-button" mnemonicParsing="false" text="Start" />
+      <Button id="confirm-button" fx:id="startButton" mnemonicParsing="false" text="Start" />
    </children>
    <padding>
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
