--- a/src/main/resources/eu/yeger/comaga/view/gameScreen.fxml
+++ b/src/main/resources/eu/yeger/comaga/view/gameScreen.fxml
@@ -6,18 +6,18 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="vBox" spacing="20.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.yeger.comaga.controller.GameScreenController">
+<VBox fx:id="vBox" spacing="20.0" style="-fx-background-color: #333333;" stylesheets="@main.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.yeger.comaga.controller.GameScreenController">
    <children>
       <HBox alignment="TOP_RIGHT" spacing="10.0">
          <children>
-            <Label fx:id="scoreLabel" text="0">
+            <Label fx:id="scoreLabel" text="0" textFill="WHITE">
                <font>
-                  <Font size="20.0" />
+                  <Font size="30.0" />
                </font>
             </Label>
-            <Label text="Points">
+            <Label text="Points" textFill="WHITE">
                <font>
-                  <Font size="20.0" />
+                  <Font size="30.0" />
                </font>
             </Label>
          </children>
