--- a/src/main/resources/eu/yeger/comaga/view/introScreen.fxml
+++ b/src/main/resources/eu/yeger/comaga/view/introScreen.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" spacing="40.0" stylesheets="@main.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.yeger.comaga.controller.IntroScreenController">
+<VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" spacing="40.0" style="-fx-background-color: #333333;" stylesheets="@main.css" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.yeger.comaga.controller.IntroScreenController">
    <children>
       <Label id="title-label" text="Color Matching Game">
          <font>
@@ -27,7 +27,7 @@
             <HBox alignment="CENTER" spacing="20.0">
                <children>
                   <Button id="plus-minus-button" fx:id="decreaseWidthButton" mnemonicParsing="false" text="-" />
-                  <Label fx:id="widthLabel" text="5" />
+                  <Label fx:id="widthLabel" prefWidth="100.0" text="5" />
                   <Button id="plus-minus-button" fx:id="increaseWidthButton" mnemonicParsing="false" text="+" />
                </children>
                <VBox.margin>
@@ -42,7 +42,7 @@
             <HBox alignment="CENTER" spacing="20.0">
                <children>
                   <Button id="plus-minus-button" fx:id="decreaseHeightButton" mnemonicParsing="false" text="-" />
-                  <Label fx:id="heightLabel" text="10" />
+                  <Label fx:id="heightLabel" prefWidth="100.0" text="10" />
                   <Button id="plus-minus-button" fx:id="increaseHeightButton" mnemonicParsing="false" text="+" />
                </children>
             </HBox>
