--- a/src/main/resources/eu/yeger/comaga/view/gameScreen.fxml
+++ b/src/main/resources/eu/yeger/comaga/view/gameScreen.fxml
@@ -25,6 +25,23 @@
             <Insets bottom="5.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </HBox>
+      <HBox alignment="TOP_RIGHT" layoutX="60.0" layoutY="60.0" spacing="10.0">
+         <children>
+            <Label fx:id="turnLabel" text="0" textFill="WHITE">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </Label>
+            <Label text="Turns Left" textFill="WHITE">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </Label>
+         </children>
+         <padding>
+            <Insets bottom="5.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+      </HBox>
    </children>
    <padding>
       <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
